...
                            .foregroundColor(Color.theme.primary)
                    } else {
                        Image(systemName: "heart")
                            .foregroundColor(.white)
                    }
                }
                .accessibilityIdentifier("FavoriteBtn")
                .opacity(vm.isLoading || vm.isFavorited ? 0.5 : 1.0)
                .disabled(vm.isLoading || vm.isFavorited)
            }
        }
    }
    
...
            
            VStack(alignment: .leading, spacing: 12) {
                Text(vm.currentMovie.wrappedTitle)
                    .font(.title2)
                    .lineLimit(nil)
                    .fixedSize(horizontal: false, vertical: true)
                    .accessibilityIdentifier("MovieTitle")
                    .textSelection(.enabled)
                
                RatingView(rating: vm.currentMovie.wrappedVoteAverage)
                    .font(.caption)
                
                Text(vm.currentMovie.wrappedReleaseDate)
...
