...
            if vm.isFetchingMore {
                Text("loading")
                    .opacity(0.75)
                    .multilineTextAlignment(.center)
            }
        }
        .accessibilityIdentifier("FavoriteList")
        .refreshable {
            Task {
                await vm.refresh()
            }
        }
        .listStyle(.plain)
...
